name:                mac-address

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.0
synopsis:            MAC Address type, with dhall support
description:         MAC Address type, with dhall support
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    MACAddress
  other-modules:
  default-extensions: DeriveAnyClass
                    , DeriveGeneric
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , QuasiQuotes
                    , PatternSynonyms
                    , RecordWildCards
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , UnicodeSyntax
                    , ViewPatterns

  build-depends:      aeson, base, base-unicode-symbols, data-default
                    , data-textual, deepseq, dhall, either, parsec, parsers
                    , QuickCheck, scientific, template-haskell, text
                    , text-printer

                    , more-unicode >= 0.0.15.0
                    , parsec-plus  >= 1.1.0.1
                    , quasiquoting >= 1.0.0.0
                    , textual-plus >= 1.0.2.0
                    , tfmt         >= 0.2.4.0

  hs-source-dirs:      src
  default-language:    Haskell2010

--------------------------------------------------------------------------------
