name:                mac-address

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.1.0
synopsis:            MAC Address type, with dhall support
description:         MAC Address type, with dhall support
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    MACAddress, T.MACAddress
  other-modules:
  default-extensions: DeriveAnyClass
                    , DeriveGeneric
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , QuasiQuotes
                    , PatternSynonyms
                    , RecordWildCards
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , UnicodeSyntax
                    , ViewPatterns

  build-depends:      aeson, base, base-unicode-symbols, data-default
                    , data-textual, deepseq, dhall, either, parsec, parsers
                    , QuickCheck, scientific, tasty, tasty-hunit
                    , tasty-quickcheck, template-haskell, text, text-printer
                    , yaml

                    , more-unicode     >= 0.0.17.2
                    , parsec-plus-base >= 1.0.5.23
                    , parsec-plus      >= 1.1.1.44
                    , quasiquoting     >= 1.0.1.32
                    , tasty-plus       >= 1.5.2.24
                    , textual-plus     >= 1.1.2.0
                    , tfmt             >= 0.2.7.25

  hs-source-dirs:      src
  default-language:    Haskell2010

--------------------------------------------------------------------------------

test-suite mac-address-test
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  type:               exitcode-stdio-1.0
  hs-source-dirs:     t
  main-is:            mac-address-test.hs
  build-depends:      base, mac-address, tasty
  default-extensions: NoImplicitPrelude
                    , UnicodeSyntax
  default-language:   Haskell2010

-------------------------------------------------------------------------------
